fixed spacing, font size, added project tabs

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,8 @@ div.ui.text.container {
 }
 
 p {
-  font-size: 30px;
+  font-size: 18px;
+  width: 100%;
 }
 
 h1 {
